--- a/WxDwelling/pages/homeissue/homeissue.wxml
+++ b/WxDwelling/pages/homeissue/homeissue.wxml
@@ -19,6 +19,7 @@
 			 	<input type="text" auto-focus placeholder="请输入您的姓名" bindinput="inputName"></input>
 			</view>
 		</view>
+    <!-- 手机号码-->
 		<view class="input-item">
 			<text class="input-item-label">手机号码:</text>
 			<view class="input-item-content">
@@ -26,28 +27,44 @@
 			</view>
       
 		</view>
+    <!--房屋面积 -->
     <view class="input-item">
-			<text class="input-item-label">小区名称:</text>
+			<text class="input-item-label">房屋面积:</text>
 			<view class="input-item-content">
-			 	<input type="text" auto-focus placeholder="请输入您的姓名" bindinput="inputName"></input>
+			 	<input type="text" auto-focus placeholder="请输入房屋总面积㎡"bindinput="inputName"></input>
 			</view>
 		</view>
+    <!--房屋租金 -->
     <view class="input-item">
-			<text class="input-item-label">房东姓名:</text>
+			<text class="input-item-label">房屋租金:</text>
 			<view class="input-item-content">
-			 	<input type="text" auto-focus placeholder="请输入您的姓名" bindinput="inputName"></input>
+			 	<input type="text" auto-focus placeholder="请输入价格" bindinput="inputName"></input>
 			</view>
 		</view>
-    	<view class="input-item">
-					<text class="input-item-label">项目行业</text>
-					<picker class="input-item-content" bindchange="bindPickerChange" data-pickername="industry" value="{{industryindex}}" range="{{industryarr}}" mode="selector">{{industryarr[industryindex]}}
+    <!--房屋类型-->
+    <view class="input-item">
+					<text class="input-item-label">房屋类型</text>
+					<picker class="input-item-content" bindchange="bindPickerChange" data-pickername="status" value="{{statusindex}}" range="{{statusarr}}" mode="selector">{{statusarr[statusindex]}}
 					</picker>
 				</view>
-    
+        <!--房屋描述-->
+      <view class="input-item">
+			<text class="input-item-label">
+      描
+      述
 
+      </text>
+			<view class="input-item-content">
+			 	<input type="text" bindinput="inputName"></input>
+			</view>
+		</view>
+<!--水平线-->
+
+        <!--下一步-->
+        <view class="btn-submit">
+		<button class="btn-block btn-orange" bindtap="applySubmit">下一步</button>
+	       </view>
 	</view>
-	<view class="btn-submit">
-		<button class="btn-block btn-orange" bindtap="reserveSubmit" disabled="{{submited}}">确认预约</button>
-	</view>
+
 </view>
 
