--- a/WxDwelling/pages/homepage/homepage.wxss
+++ b/WxDwelling/pages/homepage/homepage.wxss
@@ -16,14 +16,13 @@ swiper {
 }
 .category {
   padding: 15px 0 10px 0;
-  overflow: auto;
+  overflow: 0,auto;
   background-color: #FFF;
-  margin-bottom: -80px;
 }
 .category_item {
-  width: 25%;
+  width: 33%;
   float: left;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 .icon_wrap {
   width: 40px;
