--- a/WxDwelling/pages/userpage/userpage.wxml
+++ b/WxDwelling/pages/userpage/userpage.wxml
@@ -1,13 +1,13 @@
 <!--pages/userpage/userpage.wxml-->
+
 <view class="user-head">
-    <view class="center" bindtap = "userdata">
-        <view class="user-img">
-            <image src="{{userInfo.avatarUrl}}"/>
-        </view>
-        <view class="user-text">
-            <text class="text">{{userInfo.nickName}}</text>
-        </view>
-    </view>
+  <view class="userinfo">
+    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
+    <block wx:else>
+      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
+      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
+    </block>
+  </view>
 </view>
 
  <view class="category">
