--- a/WxDwelling/pages/userpage/userpage.wxss
+++ b/WxDwelling/pages/userpage/userpage.wxss
@@ -1,9 +1,23 @@
 /* pages/userpage/userpage.wxss */
 /**index.wxss**/
+.userinfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
+.userinfo-avatar {
+  width: 128rpx;
+  height: 128rpx;
+  margin: 20rpx;
+  border-radius: 50%;
+}
+
+.userinfo-nickname {
+  color: #aaa;
+}
 .user-head {
   background:#fff;
-  height:250px;
   position: relative;
   display:-webkit-flex;
 	display:flex;
