--- a/WxDwelling/pages/userpage/userpage.wxss
+++ b/WxDwelling/pages/userpage/userpage.wxss
@@ -56,7 +56,6 @@
 
 .list {
   background: #fff;
-  margin-top:50rpx;
 }
 .list .item{
   padding:20px 15px;
@@ -82,6 +81,7 @@
 }
 
 .category {
+  height: 80px;
   padding: 15px 0 10px 0;
   overflow: 0,auto;
   background-color: #FFF;
