--- a/WxDwelling/pages/homepage/homepage.wxml
+++ b/WxDwelling/pages/homepage/homepage.wxml
@@ -29,5 +29,21 @@
 <!--热们房源-->
 <view>
 <view>热门房源</view>
-
+    <scroll-view class="container-body" scroll-y="true" scroll-top="{{scrolltop}}" bindscroll="scrollHandle" lower-threshold="50" bindscrolltolower="scrollLoading">
+		<view class="service-list">
+			<navigator class="service-item" wx:for="{{conferencelist}}" url="../details/details?id={{item.House_ID}}">
+				<view class="service-img">
+					<image src="../../image/{{item.House_ImgUrl}}" mode="aspectFill"></image>
+				</view>
+				<view class="service-text">
+					<view class="service-tite">{{item.House_Name}}</view>
+					<view class="service-tags">
+						<text>{{item.House_RentMoney}}/每月</text>
+					</view>
+					<text class="service-city">出租类型：{{item.city}}</text>
+				</view>
+			</navigator>
+		</view>
+		<view class="gototop {{scrolltop>200?'active':''}}" bindtap="goToTop"></view>
+	</scroll-view>
 </view>
