--- a/WxDwelling/pages/mainpage/mainpage.wxml
+++ b/WxDwelling/pages/mainpage/mainpage.wxml
@@ -39,12 +39,7 @@
 						<view class="filter-tags">
 							<text wx:for="{{filterdata.housetype}}" wx:key="{{item.id}}" data-id="{{item.id}}" bindtap="housetype" class="{{filter.housetype==item.id?'active':''}}">{{item.title}}</text>
 						</view>
-					</view>
-          <view class="group-header">房源类型</view>
-					<view class="group-body">
-						<view class="filter-tags">
-							<text wx:for="{{filterdata.Sourcetype}}" wx:key="{{item.id}}" data-id="{{item.id}}" bindtap="Sourcetype" class="{{filter.Sourcetype==item.id?'active':''}}">{{item.title}}</text>
-						</view>
+					
 					</view>
           <view class="group-header">装修风格</view>
 					<view class="group-body">
@@ -69,16 +64,16 @@
 	</view>
 	<scroll-view class="container-body" scroll-y="true" scroll-top="{{scrolltop}}" bindscroll="scrollHandle" lower-threshold="50" bindscrolltolower="scrollLoading">
 		<view class="service-list">
-			<navigator class="service-item" wx:for="{{servicelist}}" wx:key="{{item.id}}" url="../details/details?id={{item.id}}">
+			<navigator class="service-item" wx:for="{{conferencelist}}" url="../details/details?ID={{item.House_ID}}">
 				<view class="service-img">
-					<image src="{{item.imgurl}}" mode="aspectFill"></image>
+					<image src="../../image/{{item.House_ImgUrl}}" mode="aspectFill"></image>
 				</view>
 				<view class="service-text">
-					<view class="service-tite">{{item.name}}</view>
+					<view class="service-tite">{{item.House_Name}}</view>
 					<view class="service-tags">
-						<text>{{item.tag}}</text>
+						<text>{{item.House_RentMoney}}/每月</text>
 					</view>
-					<text class="service-city">服务城市：{{item.city}}</text>
+					<text class="service-city">出租类型：{{item.city}}</text>
 				</view>
 			</navigator>
 		</view>
