--- a/WxDwelling/pages/homeissueone/homeissueone.wxml
+++ b/WxDwelling/pages/homeissueone/homeissueone.wxml
@@ -13,43 +13,34 @@
 	<view class="input-item">
 			<text class="input-item-label">出租房间:</text>
 			<view class="input-item-content">
-				<input type="idcard" placeholder="请输入出租房间"bindinput="inputPhone"></input>
+				<input type="idcard" placeholder="请输入出租房间" bindinput="inputPhone" name='PublishHouse_Num'></input>
 			</view>
 		</view>
      <!--房间面积-->
     <view class="input-item">
 			<text class="input-item-label">房间面积:</text>
 			<view class="input-item-content">
-				<input type="idcard" placeholder="请输入出租房间"bindinput="inputPhone"></input>
+				<input name='PublishHouse_Area' type="idcard" placeholder="请输入出租房间面积"bindinput="inputPhone"></input>
 			</view>
 		</view>
      <!--朝向-->
          <view class="input-item">
 					<text class="input-item-label">朝向</text>
-					<picker class="input-item-content" bindchange="bindPickerChange" data-pickername="status" value="{{statusindex}}" range="{{statusarr}}" mode="selector">{{statusarr[statusindex]}}
-					</picker>
+          <picker name='Orientation_ID' class="input-item-content" bindchange="bindPickerChange" data-pickername="{{Orientation[hx_index].Orientation_ID}}" value="{{Orientation[hx_index].Orientation_ID}}" range="{{Orientation}}" range-key="{{'Orientation_Name'}}" mode="selector" bindchange="bindPickerChange_hx">{{Orientation[hx_index].Orientation_Name}} 
+					</picker> 
 				</view>
      <!--整套户型-->
       <view class="input-item">
 					<text class="input-item-label">楼房类型</text>
-					<picker class="input-item-content" bindchange="bindPickerChange" data-pickername="status" value="{{statusindex}}" range="{{statusarr}}" mode="selector">{{statusarr[statusindex]}}
+          <picker name='BuildingType_ID' class="input-item-content" bindchange="bindPickerChange" data-pickername="{{BuildingType[hx_index].BuildingType_ID}}" value="{{BuildingType[hx_index].BuildingType_ID}}" range="{{BuildingType}}" range-key="{{'BuildingType_Name'}}" mode="selector" bindchange="bindPickerChange_hx">{{BuildingType[hx_index].BuildingType_Name}} 
 					</picker>
 				</view>
-         <!--整套面积-->
+    <!--风格-->
       <view class="input-item">
-			<text class="input-item-label">整套面积:</text>
-			<view class="input-item-content">
-				<input type="idcard" placeholder="请输入整套面积"bindinput="inputPhone"></input>
-			</view>
-		</view>
-  <!--租金-->
-  <view class="input-item">
-			<text class="input-item-label">租金:</text>
-			<view class="input-item-content">
-				<input type="idcard" placeholder="请输入月租金"bindinput="inputPhone"></input>
-			</view>
-      
-		</view>
+					<text class="input-item-label">装修风格</text>
+          <picker name='Style_ID' class="input-item-content" bindchange="bindPickerChange" data-pickername="{{Style[hx_index].Style_ID}}" value="{{Style[hx_index].Style_ID}}" range="{{Style}}" range-key="{{'Style_Name'}}" mode="selector" bindchange="bindPickerChange_hx">{{Style[hx_index].Style_Name}} 
+					</picker>
+				</view>
       <!--楼层-->
        <view class="input-item">
 			<text class="input-item-label">楼层:</text>
@@ -57,19 +48,40 @@
 				<input type="idcard" placeholder="请输入层数"bindinput="inputPhone"></input>
 			</view>
 		</view>
-    <!--楼房类型 -->
-      <view class="input-item">
-					<text class="input-item-label">楼房类型</text>
-					<picker class="input-item-content" bindchange="bindPickerChange" data-pickername="status" value="{{statusindex}}" range="{{statusarr}}" mode="selector">{{statusarr[statusindex]}}
-					</picker>
-				</view>
-        <!--起租日期 -->
+    <!--总楼层-->
+       <view class="input-item">
+			<text class="input-item-label">总楼层:</text>
+			<view class="input-item-content">
+				<input type="idcard" placeholder="请输入层数"bindinput="inputPhone"></input>
+			</view>
+		</view>
+    <!--付款方式-->
+       <view class="input-item">
+			<text class="input-item-label">付款方式:</text>
+			<view class="input-item-content">
+				<input type="idcard" placeholder="请输入月租/季租/整租"bindinput="inputPhone"></input>
+			</view>
+		</view>
+    <!--起租日期 -->
     <view class="input-item">
 			<text class="input-item-label">起租日期:</text>
 			<view class="input-item-content">
 			 	<input type="text" auto-focus placeholder="请输入:年/月/日" bindinput="inputName"></input>
 			</view>
 		</view>
+         <!--止租日期 -->
+    <view class="input-item">
+			<text class="input-item-label">止租日期:</text>
+			<view class="input-item-content">
+			 	<input type="text" auto-focus placeholder="请输入:年/月/日" bindinput="inputName"></input>
+			</view>
+		</view>
+    <!--房屋设施-->
+    <checkbox-group bindchange="checkboxChange">
+        <label class="checkbox input-item-content cks" wx:for="{{Facilityitems}}">
+          <checkbox value="{{item.Facility_Name}}" checked="{{item.checked}}" />{{item.Facility_Name}}
+        </label>
+    </checkbox-group>
 <!--房源照片-->
     <view class="input-item input-item-full">
 				<text class="input-item-label">房源图片</text>
@@ -132,6 +144,8 @@
 			 	<input type="text" auto-focus placeholder="请输入:年/月/日" bindinput="inputName"></input>
 			</view>
 		</view>
+
+    
         <!--房源图片 -->
     <view class="input-item input-item-full">
 				<text class="input-item-label">房源图片</text>
