--- a/WxDwelling/pages/homeissue/homeissue.wxml
+++ b/WxDwelling/pages/homeissue/homeissue.wxml
@@ -1,6 +1,6 @@
 <!--pages/homeissue/homeissue.wxml-->
-<!--轮播图-->
-<view>
+
+  <view>
 <swiper indicator-dots="{{indicatorDots}}" 
     autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
     <block wx:for="{{imgUrls}}">
@@ -11,59 +11,53 @@
   </swiper>
   </view>
 <!--发布房源信息框-->
+<form bindsubmit="formSubmit" bindreset="formReset">
 <view class="containerhouse">
 	<view class="input-list">
 				<view class="input-item">
 			<text class="input-item-label">房东姓名:</text>
 			<view class="input-item-content">
-				<input type="idcard" placeholder="请输入您的姓名"  bindinput="inputPhone"></input>
+				<input type="idcard" placeholder="请输入您的姓名" name='PublishHouse_Owner'bindinput="inputPhone"></input>
 			</view>
 		</view>
     <!-- 手机号码-->
 		<view class="input-item">
 			<text class="input-item-label">手机号码:</text>
 			<view class="input-item-content">
-				<input type="idcard" placeholder="请输入您的手机号码" maxlength="11" bindinput="inputPhone"></input>
+				<input type="idcard" placeholder="请输入您的手机号码" maxlength="11" bindinput="inputPhone" name='PublishHouse_OwnerTel'></input>
 			</view>
       
-		</view>
-    <!--房屋面积 -->
-    <view class="input-item">
-			<text class="input-item-label">房屋面积:</text>
-			<view class="input-item-content">
-			 	<input type="text" auto-focus placeholder="请输入房屋总面积㎡"bindinput="inputName"></input>
-			</view>
 		</view>
     <!--房屋租金 -->
     <view class="input-item">
 			<text class="input-item-label">房屋租金:</text>
 			<view class="input-item-content">
-			 	<input type="text" auto-focus placeholder="请输入价格" bindinput="inputName"></input>
+			 	<input type="text" auto-focus placeholder="请输入价格" bindinput="inputName" name='PublishHouse_RentMoney'></input>
 			</view>
 		</view>
     <!--房屋类型-->
     <view class="input-item">
-					<text class="input-item-label">房屋类型</text>
-					<picker class="input-item-content" bindchange="bindPickerChange" data-pickername="status" value="{{statusindex}}" range="{{statusarr}}" mode="selector">{{statusarr[statusindex]}}
+					<text class="input-item-label">房屋户型:</text>
+					<picker name='HabitableRoom_ID' class="input-item-content" bindchange="bindPickerChange" data-pickername="{{roomType[hx_index].HabitableRoom_ID}}" value="{{roomType[hx_index].HabitableRoom_ID}}" range="{{roomType}}" range-key="{{'HabitableRoom_Name'}}" mode="selector" bindchange="bindPickerChange_hx">{{roomType[hx_index].HabitableRoom_Name}} 
 					</picker>
 				</view>
         <!--房屋描述-->
       <view class="input-item">
-			<text class="input-item-label">
+			<text class="input-item-label" >
       描
       述
       </text>
 			<view class="input-item-content">
-			 	<input type="text" bindinput="inputName"></input>
+			 	<input type="text" bindinput="inputName" name='PublishHouse_Description'/>
 			</view>
 		</view>
 <!--水平线-->
 
+
         <!--下一步-->
         <view class="btn-submit">
-		<button class="btn-block btn-orange" bindtap="applySubmit">下一步</button>
+    <button class="btn-block btn-orange" form-type="submit" >下一步</button>
 	       </view>
 	</view>
-
 </view>
-
+</form>
