--- a/WxDwelling/pages/Complaints/Complaints.wxml
+++ b/WxDwelling/pages/Complaints/Complaints.wxml
@@ -30,19 +30,18 @@
    <swiper-item >
  <view>--请赐予建议--</view>
    <!--用户反馈-->
-<form bindsubmit="onSubmit" bindreset="">
+
 <view class="container1">
     <view class='row text_box'>
-        <textarea class='text1' name="Complain_Content" value="{{content}}" placeholder="请输入您的建议内容" />
+        <textarea class='text1' bindblur='bindBlur' value="{{Suggest_Content}}" placeholder="请输入您的建议内容" />
     </view>
     <view class='row btn_box'>
-        <button formType="submit" class='submit'>提交建议</button>
+        <button bindtap='onSubmit' class='submit'>提交建议</button>
     </view>
     <view class='row version'>
         <view class='txt'>版本1.0</view>
         
     </view>
 </view>
-</form>
     </swiper-item >
 </swiper>
