--- a/WxDwelling/pages/homepage/homepage.wxml
+++ b/WxDwelling/pages/homepage/homepage.wxml
@@ -32,7 +32,7 @@
 		<view class="service-list">
 			<navigator class="service-item" wx:for="{{conferencelist}}" url="../details/details?ID={{item.House_ID}}">
 				<view class="service-img">
-					<image src="../../image/{{item.House_ImgUrl}}" mode="aspectFill"></image>
+					<image src="http://localhost:55909/Content/Img/{{item.House_ImgUrl}}" mode="aspectFill"></image>
 				</view>
 				<view class="service-text">
 					<view class="service-tite">{{item.House_Name}}</view>
