--- a/WxDwelling/pages/details/details.wxss
+++ b/WxDwelling/pages/details/details.wxss
@@ -107,3 +107,14 @@
 	width: 50%;
 	display: inline-block;
 }
+.btn-submit{
+	padding: 20rpx;
+}
+.btn-block{
+	width: 100%;
+	line-height: 88rpx;
+}
+.btn-orange{
+	background: #f7982a;
+	color: #fff;
+}
