--- a/WxDwelling/pages/homepage/homepage.wxml
+++ b/WxDwelling/pages/homepage/homepage.wxml
@@ -27,7 +27,7 @@
 <!--热们房源-->
 <view>
   <view>热门房源</view>
-  <scroll-view class="container-body" scroll-y="true" scroll-top="{{scrolltop}}" bindscroll="scrollHandle" lower-threshold="50" bindscrolltolower="scrollLoading">
+  <scroll-view class="container-body" scroll-y="true" scroll-top="{{scrolltop}}" bindscroll="scrollH ， andle" lower-threshold="50" bindscrolltolower="scrollLoading">
     <view class="service-list">
       <navigator class="service-item" wx:for="{{conferencelist}}" url="../details/details?ID={{item.House_ID}}">
         <view class="service-img">
